fixed layout issue

--- a/portfolio/src/Home.css
+++ b/portfolio/src/Home.css
@@ -19,6 +19,7 @@ ul {
     border: 2px solid #fff;
     background-color: #fff;
     float: left;
+    margin-right: 50px;
 }
   .space-invader-defender {
     box-shadow: 
